--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         >Ivano-Frankivsk</a
       >
       <br />
-      <img src="fr/Ratusha.jpg" width="400" alt="Ivano-Frankivsk Ratusha" />
+      <img src="Ratusha.jpg" width="400" alt="Ivano-Frankivsk Ratusha" />
       <h4>
         Ivano-Frankivsk (Ukrainian: Іва́но-Франкі́вськ, Russian: Ивано-Франковск;
         formerly Stanyslaviv,or Stanisławów; see below) is a historic city
@@ -25,7 +25,7 @@
         Ivano-Frankivsk Oblast. Administratively, it is designated as a city of
         regional significance within the oblast, and together with a number of
         rural localities, is incorporated as Ivano-Frankivsk Municipality.
-        Population: 230,929 (2016 est.)
+        Population: 230,929 .
       </h4>
       <section>
         <h4>History</h4>
@@ -35,7 +35,7 @@
           the multi-ethnic population of the region in case of armed conflicts
           such as the Khmelnytsky Uprising of 1648.
         </h5>
-        <img src="fr/old.jpg" width="400" alt="Old Ratusha" />
+        <img src="old.jpg" width="400" alt="Old Ratusha" />
       </section>
       <section>
         <h4>History</h4>
@@ -44,7 +44,7 @@
           renamed 'Stanislav'. And now the city is administrative centre in
           Western part of Ukraine -centre of Ivano-Frankivsk Oblast.
         </h5>
-        <img src="fr/images.jpg" alt="City" />
+        <img src="city.jpg" alt="City" />
       </section>
 	<section>
 		<H4>The benefits of living in the Ivano-Frankivsk:</H4>
@@ -58,7 +58,7 @@
 	        <p>table</p>
 	        <table>
 	          <tr>
-			         <td>1</td>
+	            <td>1</td>
 	            <td>2</td>
 	            <td>3</td>
 	            <td>4</td>
@@ -66,8 +66,8 @@
 	            <td>6</td>
 	            <td>7</td>
 	            <td>8</td>
-			        <td>9</td>
-		          <td>10</td> 
+	            <td>9</td>
+		    <td>10</td> 
 	          </tr>
 		          <tr>
 	            <td>10</td>
@@ -77,9 +77,9 @@
 	            <td>50</td>
 	            <td>60</td>
 	            <td>70</td>
-		         	<td>80</td>
-			        <td>90</td>
-		         	<td>100</td>
+		    <td>80</td>
+	            <td>90</td>
+		    <td>100</td>
 	          </tr>
 		       </table>
 	        </section>
